[package]
name = "stm32f103rbt6"
version = "0.1.0"
authors = ["zergslaw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = "0.1.1"
stm32f1xx-hal = { version = "0.6", features = ["rt", "stm32f103", "stm32-usbd"] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-halt = "0.2"
cortex-m-rtic = "0.5"
generic-array = "0.13"
embedded-hal = "0.2"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true